--- a/Act4icons.html
+++ b/Act4icons.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="Act4icons.css">
-    <title>Document</title>
+    <title>Name in ICONS</title>
 </head>
 <body>
         <h1 style="text-align: center;">
